[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "Real-world bug triage environment for AI agent training"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "envs", "tasks", "graders"]